added maven options